[gd_scene load_steps=18 format=2]

[ext_resource path="res://main/game/game.gd" type="Script" id=1]
[ext_resource path="res://systems/virtual_controller/virtual_controller.gd" type="Script" id=2]
[ext_resource path="res://entities/human/assassin/HumanAssassin.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/human/innocent/InnocentHuman.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/human/ai/InnocentBrain.tscn" type="PackedScene" id=5]
[ext_resource path="res://maps/M01-Forest.tscn" type="PackedScene" id=6]
[ext_resource path="res://systems/virtual_controller/device_controller.gd" type="Script" id=7]
[ext_resource path="res://main/game/ui.gd" type="Script" id=8]
[ext_resource path="res://main/game/humans.gd" type="Script" id=9]
[ext_resource path="res://main/game/world-environment.tres" type="Environment" id=10]
[ext_resource path="res://assets/ui/main-theme.tres" type="Theme" id=11]
[ext_resource path="res://main/game/match_timer.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("root/ScreenFade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("root/labels/GameOverLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("root/labels/MatchTimeLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("root/ScreenFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("root/ScreenFade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("root/labels/MatchTimeLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "win_game"
tracks/0/type = "value"
tracks/0/path = NodePath("root/labels/GameOverLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("root/labels/MatchTimeLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("WinGameCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 20.0
loop = true
step = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("WinGameCamera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -16.411, -139.457, 0 ), Vector3( -16.411, 40.543, 0 ), Vector3( -16.411, 220.543, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinGameCamera:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="root" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScreenFade" type="ColorRect" parent="UI/root"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="labels" type="Control" parent="UI/root"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="GameOverLabel" type="Label" parent="UI/root/labels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "GAME_OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchTimeLabel" type="Label" parent="UI/root/labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 42.0
size_flags_horizontal = 4
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/start_game = SubResource( 2 )
anims/win_game = SubResource( 3 )

[node name="Humans" type="Spatial" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Human" parent="Humans" instance=ExtResource( 3 )]
color = Color( 1, 0, 0, 1 )

[node name="Controller" type="Node" parent="Humans/Human"]
script = ExtResource( 7 )

[node name="Human2" parent="Humans" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06008, 0.583317, -21.1011 )
color = Color( 0, 0.156863, 1, 1 )
mouse_sensitivity = 0.25
is_player = false
ignore_rotation_on_movement = true

[node name="Controller" type="Node" parent="Humans/Human2"]
script = ExtResource( 2 )

[node name="Brain" parent="Humans/Human2" instance=ExtResource( 5 )]
enabled = true
actor_path = NodePath("..")

[node name="Human3" parent="Humans" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06008, 0.583317, -21.1011 )
color = Color( 0, 1, 0.133333, 1 )
mouse_sensitivity = 0.25
is_player = false
ignore_rotation_on_movement = true

[node name="Controller" type="Node" parent="Humans/Human3"]
script = ExtResource( 2 )

[node name="Brain" parent="Humans/Human3" instance=ExtResource( 5 )]
enabled = true
actor_path = NodePath("..")

[node name="Human4" parent="Humans" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06008, 0.583317, -21.1011 )
color = Color( 0.992157, 1, 0, 1 )
mouse_sensitivity = 0.25
is_player = false
ignore_rotation_on_movement = true

[node name="Controller" type="Node" parent="Humans/Human4"]
script = ExtResource( 2 )

[node name="Brain" parent="Humans/Human4" instance=ExtResource( 5 )]
enabled = true
actor_path = NodePath("..")

[node name="Cutscenes" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="WinGameCamera" type="Camera" parent="Cutscenes"]
transform = Transform( -0.759918, 0.183647, -0.623537, 0, 0.95926, 0.282526, 0.650019, 0.214696, -0.728959, 45.4132, 25.8507, 17.5152 )
current = true
fov = 90.0
far = 400.0

[node name="CutscenePlayer" type="AnimationPlayer" parent="Cutscenes"]
autoplay = "default"
anims/default = SubResource( 4 )
anims/win_game = SubResource( 5 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="Timers" type="Node" parent="."]

[node name="GraceTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MatchTimer" type="Timer" parent="Timers"]
one_shot = true
script = ExtResource( 12 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 10 )
[connection signal="human_died" from="Humans" to="." method="human_died"]
[connection signal="timeout" from="Timers/GraceTimer" to="." method="start_game"]
[connection signal="match_time_update" from="Timers/MatchTimer" to="UI" method="_on_MatchTimer_match_time_update"]
